new sections added

--- a/index.html
+++ b/index.html
@@ -4,9 +4,22 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Seal Your Knowledge</title>
 </head>
 <body>
+    <h1>Seal Your Knowledge</h1>
+    <section id="onboarding">
+
+    </section>
+
+    <section id="memberHome">
+
+    </section>
+
+    <section id="guestHome">
+
+    </section>
+    
     
 </body>
 </html>
