log in html added

--- a/index.html
+++ b/index.html
@@ -4,22 +4,23 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="styles.css" rel="stylesheet">
     <title>Seal Your Knowledge</title>
 </head>
+
 <body>
     <h1>Seal Your Knowledge</h1>
     <section id="onboarding">
-
+        <img src="images/seal.png" alt="centennial seal image">
+        <section id="loginForm">
+            <h2>Log In</h2>
+            <section id="loginInput">
+                <label>username: <input></input></label>
+                <label>password: <input></input></label>
+                <button>Log In</button>
+            </section>
+        </section>
     </section>
-
-    <section id="memberHome">
-
-    </section>
-
-    <section id="guestHome">
-
-    </section>
-    
     
 </body>
 </html>
