--- a/index.html
+++ b/index.html
@@ -4,6 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- font -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@100;200;300;400;500;700&family=Life+Savers:wght@400;700;800&display=swap" rel="stylesheet">
+   
+    <!-- stylesheet -->
     <link href="styles.css" rel="stylesheet">
     <title>Seal Your Knowledge</title>
 </head>
@@ -11,13 +17,19 @@
 <body>
     <h1>Seal Your Knowledge</h1>
     <section id="onboarding">
-        <img src="images/seal.png" alt="centennial seal image">
+        <img src="images/seal.png" alt="centennial seal image" width="500" height="500">
         <section id="loginForm">
             <h2>Log In</h2>
             <section id="loginInput">
                 <label>username: <input></input></label>
                 <label>password: <input></input></label>
                 <button>Log In</button>
+            </section>
+
+            <section id="guest">
+                <p>Don't have an account yet?</p>
+                <button>Create Account</button>
+                <button>Continue As Guest</button>
             </section>
         </section>
     </section>
