landing page completed, only needs illustration change and JS addition

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <!-- font -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@100;200;300;400;500;700&family=Life+Savers:wght@400;700;800&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@100;200;300;400;500;700&family=Lato:wght@300;400;700;900&family=Life+Savers:wght@400;700;800&display=swap" rel="stylesheet">
    
     <!-- stylesheet -->
     <link href="styles.css" rel="stylesheet">
@@ -21,11 +21,12 @@
         <section id="loginForm">
             <h2>Log In</h2>
             <section id="loginInput">
-                <label>username: <input></input></label>
-                <label>password: <input></input></label>
+                <input placeholder="Username"></input>
+                <input placeholder="Password"></input>
                 <button>Log In</button>
+            <br>
+            <br>
             </section>
-
             <section id="guest">
                 <p>Don't have an account yet?</p>
                 <button>Create Account</button>
