landing page updated

--- a/index.html
+++ b/index.html
@@ -15,25 +15,37 @@
 </head>
 
 <body>
-    <h1>Seal Your Knowledge</h1>
+<!-- landing page html BEGIN-->
     <section id="onboarding">
-        <img src="images/seal.png" alt="centennial seal image" width="500" height="500">
+
+        <section id="leftHalf">
+            <h1>Seal Your Knowledge</h1>
+            <img src="images/seal.png" alt="centennial seal image" width="500" height="500">
+        </section>
+
         <section id="loginForm">
+
             <h2>Log In</h2>
+
             <section id="loginInput">
                 <input placeholder="Username"></input>
                 <input placeholder="Password"></input>
                 <button>Log In</button>
-            <br>
-            <br>
             </section>
+
+            <br>
+            <br>
+            <br>
+
             <section id="guest">
                 <p>Don't have an account yet?</p>
                 <button>Create Account</button>
                 <button>Continue As Guest</button>
             </section>
+
         </section>
     </section>
+<!-- landing page html END-->
     
 </body>
 </html>
