--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
    
     <!-- stylesheet -->
     <link href="styles.css" rel="stylesheet">
-    <title>Seal Your Knowledge</title>
+    <title>Seal Your Knowledge!</title>
 </head>
 
 <body>
