--- a/index.html
+++ b/index.html
@@ -4,10 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    
     <!-- font -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@100;200;300;400;500;700&family=Lato:wght@300;400;700;900&family=Life+Savers:wght@400;700;800&display=swap" rel="stylesheet">
+
+    <!-- icons from font awesome-->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
    
     <!-- stylesheet -->
     <link href="styles.css" rel="stylesheet">
@@ -16,7 +20,7 @@
 
 <body>
 <!-- landing page html BEGIN-->
-    <section id="onboarding">
+    <section class="onboarding hidden">
 
         <section id="leftHalf">
             <h1>Seal Your Knowledge</h1>
@@ -46,6 +50,14 @@
         </section>
     </section>
 <!-- landing page html END-->
+
+<!-- guest user flow BEGIN -->
+    <section id="chooseTopic">
+        <i class="fa-solid fa-arrow-left"></i>
+        <h1>Choose Topic</h1>
+
+    </section>
+<!-- guest user flow END -->
     
 </body>
 </html>
