content change in guest choose topic

--- a/index.html
+++ b/index.html
@@ -15,11 +15,12 @@
    
     <!-- stylesheet -->
     <link href="styles.css" rel="stylesheet">
+    
     <title>Seal Your Knowledge!</title>
 </head>
 
 <body>
-<!-- landing page html BEGIN-->
+<!-- — — — — — — — — — — — — — landing page html BEGIN — — — — — — — — — — — — — -->
     <section class="onboarding hidden">
 
         <section id="leftHalf">
@@ -49,15 +50,16 @@
 
         </section>
     </section>
-<!-- landing page html END-->
+<!-- — — — — — — — — — — — — — landing page html END — — — — — — — — — — — — — -->
 
-<!-- guest user flow BEGIN -->
+<!-- — — — — — — — — — — — — — guest user flow BEGIN — — — — — — — — — — — — — -->
     <section id="chooseTopic">
         <i class="fa-solid fa-arrow-left"></i>
         <h1>Choose Topic</h1>
+        <p>Step 1: Select Your Choice of Topic</p>
 
     </section>
-<!-- guest user flow END -->
+<!-- — — — — — — — — — — — — — guest user flow END — — — — — — — — — — — — — -->
     
 </body>
 </html>
