Start building the board

--- a/index.html
+++ b/index.html
@@ -53,13 +53,30 @@
 <!-- — — — — — — — — — — — — — landing page html END — — — — — — — — — — — — — -->
 
 <!-- — — — — — — — — — — — — — guest user flow BEGIN — — — — — — — — — — — — — -->
-    <section id="chooseTopic">
+    <section class="chooseTopic">
         <i class="fa-solid fa-arrow-left"></i>
         <h1>Choose Topic</h1>
         <p>Step 1: Select Your Choice of Topic</p>
 
     </section>
 <!-- — — — — — — — — — — — — — guest user flow END — — — — — — — — — — — — — -->
-    
+
+<!-- — — — — — — — — — — — — — select team flow BEGIN — — — — — — — — — — — — — -->
+    <section class="selectTeam hidden">
+        <i class="fa-solid fa-arrow-left"></i>
+        <h1>Begin Game</h1>
+        <p>Step 2: Select Your Teams</p>
+
+        <label>Number of teams?</label>
+        <label>Team 1</label><input placeholder="Team 1"></input>
+        <label>Team 2</label><input placeholder="Team 2"></input>
+        <label>Team 3</label><input placeholder="Team 3"></input>
+        <label>Team 4</label><input placeholder="Team 4"></input>
+        <section>
+            <button>Start Game</button>
+        </section>
+    </section>
+<!-- — — — — — — — — — — — — — select team flow END — — — — — — — — — — — — — -->
+
 </body>
 </html>
