--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
 <body>
 <!-- — — — — — — — — — — — — — landing page html BEGIN — — — — — — — — — — — — — -->
-    <section class="onboarding">
+    <section class="home">
 
         <section id="leftHalf">
             <h1>Seal Your Knowledge</h1>
@@ -57,19 +57,39 @@
     </section>
 <!-- — — — — — — — — — — — — — landing page html END — — — — — — — — — — — — — -->
 
-<!-- — — — — — — — — — — — — — guest user flow BEGIN — — — — — — — — — — — — — -->
-    <section class="beginGame hidden">
-        <i class="fa-solid fa-arrow-left"></i>
+<!-- — — — — — — — — — — — — — select question set BEGIN — — — — — — — — — — — — — -->
+    <section class="beginGame sectionStyle hidden">
+        <i id="backHome" class="fa-solid fa-arrow-left"></i>
         <h1>Begin Game</h1>
-        <h3>Step 1: Select Your Choice of Question Set</h3>
+        <h3>Step 1: Select a Question Set</h3>
 
         <section id="groupBtn">
-            <button class="whiteBtn">Putah Creek Animals and Plants</button>
+            <button id="questionSelect" class="whiteBtn">Putah Creek Animals and Plants</button>
             <button class="whiteBtn">Patwin People</button>
         </section>
 
     </section>
-<!-- — — — — — — — — — — — — — guest user flow END — — — — — — — — — — — — — -->
-    
+<!-- — — — — — — — — — — — — — select question set END — — — — — — — — — — — — — -->
+
+<!-- — — — — — — — — — — — — — select team names BEGIN — — — — — — — — — — — — — — -->
+    <section class="teamSelect sectionStyle hidden">
+        <i id="backBegin" class="fa-solid fa-arrow-left"></i>
+        <h1>Begin Game</h1>
+        <h2>You are about to play the game with the question set, <em>Putah Creek Animals and Plants!</em></h2>
+        <h3>Step 2: Select Your Team Names</h3>
+
+        <section id="groupBtn">
+            <label>Team 1: <input placeholder="   team 1"></label></label>
+            <label>Team 2: <input placeholder="   team 2"></label></label>
+            <label>Team 3: <input placeholder="   team 3"></label></label>
+            <label>Team 4: <input placeholder="   team 4"></label></label>
+        </section>
+
+    </section>
+
+<!-- — — — — — — — — — — — — — select team names END — — — — — — — — — — — — — — — — -->
+
+
+
 </body>
 </html>
