bike images added

--- a/board.html
+++ b/board.html
@@ -24,7 +24,7 @@
         <h2>Game</h2>
 
         <section id="board-container">
-            <img class="bike-img" src="./images/bike.png" alt="bike-img">
+            <img class="bike-img" src="./images/bike1.png" alt="bike-img">
             <!-- First Row -->
             <section id="upper-row" class="row"></section>
 
