5/30 studio time updates

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 <!-- — — — — — — — — — — — — — select question set END — — — — — — — — — — — — — -->
 
 <!-- — — — — — — — — — — — — — select team names BEGIN — — — — — — — — — — — — — — -->
-    <section class="teamSelect selectTeam sectionStyle hidden">
+    <section class="teamSelect sectionStyle hidden">
         <i id="backBegin" class="fa-solid fa-arrow-left"></i>
         <h1>Begin Game</h1>
         <h2>You are about to play the game with the question set, <em>Putah Creek Animals and Plants!</em></h2>
@@ -84,8 +84,8 @@
             <label>Team 3: <input placeholder="   team 3"></label></label>
             <label>Team 4: <input placeholder="   team 4"></label></label>
         </section>
-        <section>
-            <button>Start Game</button>
+        <section id="startBtn">
+            <button><a href="board.html">Start Game</a></button>
         </section>
 
     </section>
