user test instructions added

--- a/index.html
+++ b/index.html
@@ -46,13 +46,37 @@
             <br>
             <br>
             <br>
-
             <section id="guest">
                 <p>Don't have an account yet?</p>
                 <button>Create Account</button>
                 <button id="continueGuest">Continue As Guest</button>
             </section>
 
+            <!-- user test button -->
+            <section id="userTestBtn" class="open">
+                <button>User Test Guides</button>
+            </section>
+
+            <section id="overlay" class="hidden">
+                <section id="content">
+                    <h2>This is an overlay instruction of the user test.</h2>
+                    <p>
+                        First of all, thank you for your time to participate in this user test!
+                    </p>
+                    <p>
+                        There are 3 tasks you would need to perform during this session.
+                        <ol>
+                            <li>Log in to the game to select your own quesion set</li>
+                            <li>Play the game as a guest</li>
+                            <li>Locate the rules section</li>
+                        </ol>
+                    </p>
+                    <p>
+                        Once you're done, we will ask you some questions regarding your experience with the game.
+                    </p>
+                    <button class="close">close</button>
+                </section>
+            </section>
         </section>
     </section>
 <!-- — — — — — — — — — — — — — landing page html END — — — — — — — — — — — — — -->
