--- a/board.html
+++ b/board.html
@@ -12,8 +12,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
    
     <!-- stylesheet -->
-    <link href="board.css" rel="stylesheet">
-    <link href="./styles.css" rel="stylesheet">
+    <link href="./board.css" rel="stylesheet">
     <script src="./board.js" defer></script>
 
     <title>Seal Your Knowledge!</title>
@@ -25,6 +24,10 @@
 
         <section id="board-container">
             <img class="bike-img" src="./images/bike1.png" alt="bike-img">
+            <img class="bike-img" src="./images/bike2.png" alt="bike-img">
+            <img class="bike-img" src="./images/bike3.png" alt="bike-img">
+            <img class="bike-img" src="./images/bike4.png" alt="bike-img">
+
             <!-- First Row -->
             <section id="upper-row" class="row"></section>
 
