--- a/board.html
+++ b/board.html
@@ -54,6 +54,9 @@
                         <section class="question-container hidden">
                         
                         </section>
+                        <section class="status-container hidden">
+                        
+                        </section>
                     </section>
                 </section>
 
