--- a/index.html
+++ b/index.html
@@ -123,13 +123,13 @@
         <h3>Step 2: Select Your Team Names</h3>
 
         <section id="groupBtn">
-            <label>Team 1: <input placeholder="   team 1"></label></label>
-            <label>Team 2: <input placeholder="   team 2"></label></label>
-            <label>Team 3: <input placeholder="   team 3"></label></label>
-            <label>Team 4: <input placeholder="   team 4"></label></label>
+            <label>Team 1: <input class="teamname" placeholder="   team 1"></label></label>
+            <label>Team 2: <input class="teamname" placeholder="   team 2"></label></label>
+            <label>Team 3: <input class="teamname" placeholder="   team 3"></label></label>
+            <label>Team 4: <input class="teamname" placeholder="   team 4"></label></label>
         </section>
         <section id="startBtn">
-            <button><a href="board.html">Start Game</a></button>
+            <button id="start-game">Start Game</button>
         </section>
 
     </section>
