rules button modified

--- a/index.html
+++ b/index.html
@@ -67,7 +67,9 @@
         </section>
 
         <section id="loginForm">
-            <i class="fa-solid fa-question"></i>
+            <section id="ruleSection">
+                <button class="ruleBtn">Rules</button>
+            </section>
 
             <h2>Log In</h2>
             <section id="loginInput">
