rules added on the landing page

--- a/board.html
+++ b/board.html
@@ -77,6 +77,8 @@
             <!-- Last Row -->
             <section id="lower-row" class="row"></section>
         </section>
+        
+        <!-- RESULTS PAGE -->
         <section class="final-result hidden">
             
         </section>
