--- a/index.html
+++ b/index.html
@@ -27,9 +27,26 @@
 <body>
 <!-- — — — — — — — — — — — — — OVERLAY BEGIN — — — — — — — — — — — — — -->
     <section id="rules" class="hidden">
-        <h1>This is the rules page!</h1>
-        <p>However, we are still in the creation process so we do not have any rules displayed here just yet.</p>
-        <button class="closeRule">close</button>
+        <section id="rulesContent">
+            <h1>Here are the rules for Seal Your Knowledge!</h1>
+            <p>The first team to return to the base wins the game!</p>
+            <h4>Basic Rules of the Game</h4>
+            <ol>
+                <li>Select a topic for pre-made question set</li>
+                <li>Generate 4 team names (make sure to have all four teams generated!)</li>
+                <li>Roll the dice to generate numbers between 1-6</li>
+                <li>Solve the question displayed at the center of the game board</li>
+                <li>If you answer correctly, the movers will move as the number you rolled. However, if the question is incorrect then the movers will not move forward.</li>
+            </ol>
+
+            <h4>Safety Rules!</h4>
+            <ol>
+                <li>Raise your hand before shouting the answer!</li>
+                <li>Be understanding even if your team member gets the question wrong</li>
+                <li>This is a team play! Make sure to talk with your teammates first before answering the question</li>
+            </ol>
+            <button class="closeRule">close</button>
+        </section>
     </section>
 
     <section id="overlay" class="overlayStyle hidden">
