Fix screen size

--- a/board.html
+++ b/board.html
@@ -80,7 +80,7 @@
         
         <!-- RESULTS PAGE -->
         <section class="final-result hidden">
-            
+            <h3>Congratulation!! <span class="team-winner"></span> has won the game!!!</h3>
         </section>
     </section>
 
