Try to fix redirecting page

--- a/board/board.html
+++ b/board/board.html
@@ -23,10 +23,10 @@
         <h1>Game</h1>
 
         <section class="board-container">
-            <img class="bike-img" src="./images/bike1.png" alt="bike-img">
-            <img class="bike-img" src="./images/bike2.png" alt="bike-img">
-            <img class="bike-img" src="./images/bike3.png" alt="bike-img">
-            <img class="bike-img" src="./images/bike4.png" alt="bike-img">
+            <img class="bike-img" src="../images/bike1.png" alt="bike-img">
+            <img class="bike-img" src="../images/bike2.png" alt="bike-img">
+            <img class="bike-img" src="../images/bike3.png" alt="bike-img">
+            <img class="bike-img" src="../images/bike4.png" alt="bike-img">
 
             <!-- First Row -->
             <section id="upper-row" class="row"></section>
@@ -42,7 +42,7 @@
 
                         <section class="dice-container">
                             <section class="dice-img-container">
-                                <img class="dice-img" src="./images/dice.png" alt="dice-img">
+                                <img class="dice-img" src="../images/dice.png" alt="dice-img">
                             </section>
                             <section class="roll-container">
                                 <p class="turn-display"></p>
@@ -60,7 +60,7 @@
                         </section>
                         <section class="status-container hidden">
                             <section class="dice-img-container">
-                                <img class="dice-img" src="./images/dice.png" alt="dice-img">
+                                <img class="dice-img" src="../images/dice.png" alt="dice-img">
                             </section>
                             <section class="answer-container">
                                 <p class="answer-display">Your Answer is: <span class="answer-result"></span></p>
