egghead and watertank images added

--- a/board/board.html
+++ b/board/board.html
@@ -20,7 +20,7 @@
 
 <body>
     <section id="gameplay">
-        <section class="game-container hidden">
+        <section class="game-container">
             <h1>Game</h1>
             <section class="board-container">
                 <img class="bike-img" src="../images/bike1.png" alt="bike-img">
@@ -81,7 +81,7 @@
         </section>    
 
         <!-- RESULTS PAGE -->
-        <section class="final-result">
+        <section class="final-result hidden">
             <h3>Congratulation!! <span class="team-winner"></span> has won the game!!!</h3>
             <button id="returnHome">Return Home</button>
         </section>
