--- a/board/board.html
+++ b/board/board.html
@@ -59,10 +59,11 @@
                             
                             </section>
                             <section class="status-container hidden">
-                                <section class="dice-img-container">
-                                    <img class="dice-img" src="../images/dice.png" alt="dice-img">
+                                <section class="status-header">
+                                    <h2 class="status-header-text">Incorrect</h2>
                                 </section>
                                 <section class="answer-container">
+                                    <h2 class="answer-alert">Flat Tire Alert</h2>
                                     <p class="answer-display"> <span class="answer-result"></span></p>
                                     <button id="nextTeamBtn">NEXT TEAM</button>
                                 </section>
