Minor fix for last final page

--- a/board/board.html
+++ b/board/board.html
@@ -78,13 +78,12 @@
                 <!-- Last Row -->
                 <section id="lower-row" class="row"></section>
             </section>
-            </section>
-        </section>    
 
-        <!-- RESULTS PAGE -->
-        <section class="final-result hidden">
-            <h3>Congratulation!! <span class="team-winner"></span> has won the game!!!</h3>
-            <button id="returnHome">Return Home</button>
+            <!-- RESULTS PAGE -->
+            <section class="final-result hidden">
+                <h3>Congratulation!! <span class="team-winner"></span> has won the game!!!</h3>
+                <button id="returnHome" href="../index.html">Return Home</button>
+            </section>
         </section>
     </section>
 
