--- a/board/board.html
+++ b/board/board.html
@@ -21,8 +21,8 @@
 <body>
     <section id="gameplay">
         <section class="game-container">
-            <h1>Game</h1>
-            <section class="board-container">
+            <h1>Seal Your Knowledge</h1>
+            <section class="board-container ">
                 <img class="bike-img" src="../images/bike1.png" alt="bike-img">
                 <img class="bike-img" src="../images/bike2.png" alt="bike-img">
                 <img class="bike-img" src="../images/bike3.png" alt="bike-img">
@@ -46,13 +46,13 @@
                                 </section>
                                 <section class="roll-container">
                                     <p class="turn-display"></p>
-                                    <button id="rollBtn">ROLL DICE</button>
+                                    <button id="rollBtn">Roll Dice</button>
                                 </section>
                                 
                                 <section class="roll-result-container hidden">
                                     <p class="turn-display">You rolled ...<span class="roll-result"></span>!</p>
                                 
-                                    <button id="nextQuestion">NEXT</button>
+                                    <button id="nextQuestion">Next</button>
                                 </section> 
                             </section>
                             <section class="question-container hidden">
@@ -65,7 +65,7 @@
                                 <section class="answer-container">
                                     <h2 class="answer-alert">Flat Tire Alert</h2>
                                     <p class="answer-display"> <span class="answer-result"></span></p>
-                                    <button id="nextTeamBtn">NEXT TEAM</button>
+                                    <button id="nextTeamBtn">Next Team</button>
                                 </section>
                             </section>
                         </section>
