user test button hidden

--- a/index.html
+++ b/index.html
@@ -78,9 +78,9 @@
             <img src="images/seal.png" alt="centennial seal image" width="500" height="500">
             
             <!-- user test button -->
-            <section id="userTestBtn" class="open">
+            <!-- <section id="userTestBtn" class="open">
                 <button>User Test Guides</button>
-            </section>
+            </section> -->
         </section>
 
         <section id="loginForm">
