</input> deleted, and ID name changed

--- a/index.html
+++ b/index.html
@@ -65,8 +65,8 @@
 
             <h2>Log In</h2>
             <section id="loginInput">
-                <input placeholder="Username"></input>
-                <input placeholder="Password"></input>
+                <input placeholder="Username">
+                <input placeholder="Password">
                 <button id="login">Log In</button>
             </section>
 
@@ -94,7 +94,7 @@
         <h1>Begin Game</h1>
         <h3>Step 1: Select a Question Set</h3>
 
-        <section id="groupBtn">
+        <section id="selectTopic">
             <button id="questionSelect" class="whiteBtn">Putah Creek Animals and Plants</button>
             <button id="patwin" class="whiteBtn">Patwin People</button>
         </section>
