Fix error on CSS and HTML

--- a/board/board.html
+++ b/board/board.html
@@ -82,7 +82,7 @@
             <!-- RESULTS PAGE -->
             <section class="final-result hidden">
                 <h3>Congratulation!! <span class="team-winner"></span> has won the game!!!</h3>
-                <button id="returnHome" href="../index.html">Return Home</button>
+                <a id="returnHome" href="../index.html">Return Home</a>
             </section>
         </section>
     </section>
