--- a/index.html
+++ b/index.html
@@ -65,8 +65,8 @@
 
             <h2>Log In</h2>
             <section id="loginInput">
-                <input placeholder="Username"></input>
-                <input placeholder="Password"></input>
+                <input placeholder="Username">
+                <input placeholder="Password">
                 <button id="login">Log In</button>
             </section>
 
