Fixed status for each answer

--- a/board/board.html
+++ b/board/board.html
@@ -60,10 +60,10 @@
                             </section>
                             <section class="status-container hidden">
                                 <section class="status-header">
-                                    <h2 class="status-header-text">Incorrect</h2>
+                                    <h2 class="status-header-text"></h2>
                                 </section>
                                 <section class="answer-container">
-                                    <h2 class="answer-alert">Flat Tire Alert</h2>
+                                    <h2 class="answer-alert"></h2>
                                     <p class="answer-display"> <span class="answer-result"></span></p>
                                     <button id="nextTeamBtn">Next Team</button>
                                 </section>
