--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <!-- font -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@100;200;300;400;500;700&family=Lato:wght@300;400;700;900&family=Life+Savers:wght@400;700;800&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Gluten:wght@300;400;700&family=Mali:wght@300;500;700&display=swap" rel="stylesheet">
 
     <!-- icons from font awesome-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
@@ -25,6 +25,7 @@
 
 <body>
 <!-- — — — — — — — — — — — — — OVERLAY BEGIN — — — — — — — — — — — — — -->
+<!-- change OVERLAY to FULL PAGE -->
     <section id="rules" class="hidden">
         <section id="rulesContent">
             <h1>Here are the rules for Seal Your Knowledge!</h1>
@@ -84,6 +85,8 @@
                 <button id="createAccount">Create Account</button>
                 <button id="continueGuest">Continue As Guest</button>
             </section>
+
+            <!-- Planning to make a big button that says PLAY NOW -->
         </section>
     </section>
 <!-- — — — — — — — — — — — — — landing page html END — — — — — — — — — — — — — -->
@@ -92,34 +95,20 @@
     <section class="beginGame sectionStyle hidden">
         <i id="backHome" class="fa-solid fa-arrow-left"></i>
         <section id="q-set-select">
-            <h1>Begin Game</h1>
-            <h3>Step 1: Select a Question Set</h3>
+            <h2>Click on the topic to se</h2>
 
             <section id="selectTopic">
                 <button id="questionSelect" class="whiteBtn">Putah Creek Wildlife</button>
-                <button id="patwin" class="whiteBtn">Patwin People</button>
             </section>
-        </section>
-
-        <section id="questionImg">
-            <img src="images/question.png" alt="question image" width="350" height="500">
         </section>
     </section>
 <!-- — — — — — — — — — — — — — select question set END — — — — — — — — — — — — — -->
 
-<!-- — — — — — — — — — — — — — patwin people notification BEGIN — — — — — — — — — — — — — -->
-    <section id="patwinPage" class="sectionStyle hidden">
-        <i id="backTopic" class="fa-solid fa-arrow-left"></i>
-        <h2>OOPS it seems like there are no question sets regarding the topic: "Patwin People"</h2>
-    </section>
-<!-- — — — — — — — — — — — — — patwin people notification END — — — — — — — — — — — — — -->
-
 <!-- — — — — — — — — — — — — — select team names BEGIN — — — — — — — — — — — — — — -->
     <section class="teamSelect sectionStyle hidden">
         <i id="backBegin" class="fa-solid fa-arrow-left"></i>
-        <h1>Begin Game</h1>
-        <h2>You are about to play the game with the question set, <em>Putah Creek Wildlife!</em></h2>
-        <h3>Step 2: Enter Your Team Names</h3>
+        <h1>Almost there...!</h1>
+        <h3>Enter Your Team Names</h3>
 
         <!-- I'M HAVING TROUBLE MAKING ALL PARTS REQUIRED FOR THIS FORM -->
         <section id="groupBtn">
