Combine the roll result with the question div

--- a/index.html
+++ b/index.html
@@ -112,10 +112,10 @@
 
         <!-- I'M HAVING TROUBLE MAKING ALL PARTS REQUIRED FOR THIS FORM -->
         <section id="groupBtn">
-            <section><label>Team 1: <input class="teamname" placeholder="   team 1" required></label><section class="color-square square-1"></section></section>
-            <section><label>Team 2: <input class="teamname" placeholder="   team 2" required></label><section class="color-square square-2"></section></section>
-            <section><label>Team 3: <input class="teamname" placeholder="   team 3" required></label><section class="color-square square-3"></section></section>
-            <section><label>Team 4: <input class="teamname" placeholder="   team 4" required></label><section class="color-square square-4"></section></section>
+            <section><label>Team 1:</label> <input class="teamname" placeholder="   team 1" required><section class="color-square square-1"></section></section>
+            <section><label>Team 2:</label> <input class="teamname" placeholder="   team 2" required><section class="color-square square-2"></section></section>
+            <section><label>Team 3:</label> <input class="teamname" placeholder="   team 3" required><section class="color-square square-3"></section></section>
+            <section><label>Team 4:</label> <input class="teamname" placeholder="   team 4" required><section class="color-square square-4"></section></section>
         </section>
         <section id="startBtn">
             <button type="submit" id="start-game">Start Game</button>
